[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dualpm"
description = "Lightweight utility for representing Dual Point Maps (arXiv:2412.04464 [cs.CV])"
authors = [{ name = "Ben Kaye", email = "kaye@robots.com" }]
dependencies = [
    "einops==0.*,>=0.8",
    "torch==2.*",
    "nvdiffrast@git+https://github.com/NVlabs/nvdiffrast.git@v0.3.3",
]
license = "BSD-3-Clause"
requires-python = ">=3.10"
version = "0.0.1"


[tool.ruff]
target-version = "py310"
